hphp/test/slow/prop-type-hints/invalid-prop-type3.php.expectf
Fatal error: Invalid property type hint for 'A::$x' in %s/invalid-prop-type3.php on line 5
